#72839 - Two attachment fields: SelfService; Fixes.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -463,7 +463,7 @@
           Model.ApplicationType == ApplicationType.SelfService && Model.ShowCommunicationForSelfservice))
     {
         @Html.Partial("_Communication", Model.CaseLogsModel, new ViewDataDictionary(ViewData) { { "readonly", Model.CaseDataModel.IsFinished } })
-        if (ViewBag.IsAttachementsAllowed)
+        if (Model.CaseLogsModel.IsAttachmentsAllowed)
         {
              @Html.Partial("ModalDialogs/_UploadFilePopup", "Log_upload_files_popup")
              isClipboardPopupRequired = true;
