--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -1,13 +1,14 @@
 <ng-container [formGroup]="form">
   
   <!-- External Log fields --> 
-  <div class="bordered" *ngIf="isExternalLogFieldVisible">
+<ng-container *ngIf="isExternalLogFieldVisible">
+  <div class="bordered">
     <case-textarea-control 
         [field]="caseFieldsNames.Log_ExternalText" 
         [form]="form"></case-textarea-control>
   </div>
 
-  <div class="bordered switch" *ngIf="isExternalLogFieldVisible">
+  <div class="bordered switch">
     <mbsc-switch #sendMailToNotifierControl 
                  [disabled]="isSendMailToNotifierDisabled"
                  [formControlName]="caseFieldsNames.Log_SendMailToNotifier"
@@ -18,11 +19,11 @@
     </mbsc-switch>
   </div>
   
-  <div class="bordered" *ngIf="isExternalLogFieldVisible">
+  <div class="bordered">
     <lognote-email-input [field]="caseFieldsNames.Log_ExternalEmailsCC" [form]="form"></lognote-email-input>  
   </div>
 
-  <ng-container *ngIf="isExternalLogFieldVisible && isAttachedFilesVisible">
+  <ng-container *ngIf="isAttachedFilesVisible">
     <div class="bordered" *ngIf="files && files.length > 0">
         <mbsc-listview [options]="fileListSettings" class="fileListView">
             <mbsc-listview-item *ngFor="let file of files;" icon="fa-paperclip">{{ file }}</mbsc-listview-item>
@@ -30,18 +31,21 @@
     </div>
     <log-files-upload *ngIf="hasFullAccess" [caseKey]="caseKey" [type]="logFileType.External" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
   </ng-container>
+</ng-container>
+  
   <!-- External Log fields --> 
 
   <!-- Internal Log fields -->
-  <div class="bordered" *ngIf="isInternalLogFieldVisible">
+<ng-container *ngIf="isInternalLogFieldVisible">
+  <div class="bordered">
     <case-textarea-control [field]="caseFieldsNames.Log_InternalText" [form]="form"></case-textarea-control>
   </div>
 
-  <div class="bordered" *ngIf="isInternalLogFieldVisible">
+  <div class="bordered">
     <lognote-email-input [field]="caseFieldsNames.Log_InternalEmailsTo" [form]="form"></lognote-email-input>
   </div>
 
-  <div class="bordered" *ngIf="isInternalLogFieldVisible">
+  <div class="bordered">
     <lognote-email-input [field]="caseFieldsNames.Log_InternalEmailsCC" [form]="form"></lognote-email-input>
   </div>
 
@@ -53,6 +57,8 @@
     </div>
     <log-files-upload *ngIf="hasFullAccess" [caseKey]="caseKey" [type]="logFileType.Internal" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
   </ng-container>
+</ng-container>
+  
   <!-- /Internal Log fields -->
 
 </ng-container>
