#72834 - Two attachment fields: Server - log files uploading; Fixed attaching existng case files display;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
@@ -46,7 +46,7 @@
                     <td>
                         @file.UserName
                     </td>
-                    <td>
+                    <td class="action">
                         @if (file.CanDelete)
                         {
                             if (!caseInactive)
