--- a/ExtendedCase/ExtendedCase.WebComponent/src/app/components/shared/progress.component.html
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/app/components/shared/progress.component.html
@@ -1,6 +1,6 @@
 ﻿<!-- Errors -->
 <div class="progressDiv" *ngIf="isVisible">
     <div>
-        <img src="../../../styles/images/bars.gif" /> <span>{{ progressText }}</span>
+        <img src="../../../styles/img/bars.gif" /> <span>{{ progressText }}</span>
     </div>
 </div>
