--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@using System.Web.Optimization
-@model DH.Helpdesk.Web.Areas.Admin.Models.UserInputViewModel
+﻿@model DH.Helpdesk.Web.Areas.Admin.Models.UserInputViewModel
 @{
     ViewBag.Title = "Edit";
     string copy = Request.QueryString["copy"];
     
 }
+
 @using (Html.BeginForm("edit", "users", new { id = Model.User.Id }, FormMethod.Post, new { id = "target" }))
 {
     <div class="secnavs fixed">
